[gd_scene load_steps=3 format=3 uid="uid://b2ewyygo2vrwq"]

[ext_resource type="Script" path="res://Options.gd" id="1_pijsr"]
[ext_resource type="FontFile" uid="uid://n34ni6q1yj5b" path="res://Assets/Fonts/Cascadia.ttf" id="2_88tce"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pijsr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
value = 100.0
rounded = true

[node name="CurrentVolume" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/HSlider"]
layout_mode = 0
offset_left = 80.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("2_88tce")

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/HSlider"]
layout_mode = 0
offset_top = -20.0
offset_right = 64.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("2_88tce")
text = "Volume:"

[node name="Mute" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88tce")
text = "Mute"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88tce")
item_count = 3
selected = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_88tce")
text = "Main Menu"

[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/CenterContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/CenterContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
